@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.29 2005/01/14 08:50:22 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.30 2005/01/14 20:30:08 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
   
@@ -11,6 +11,7 @@
   validation. Welcome.py code cleanups. Created Template.py based on
   Welcome.py. Rewrote Stage.py from scratch. Rewrote PortageTree.py.
   Added set_size_request() calls in PortageTree and Stage for alignment.
+  Rewrote Kernel.py
 
   13 Jan 2005; John Laliberte <allanonl@bu.edu>
   Networking.py - Complete rework of the screen using (as a
